--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-tagify": "^0.1.4",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
+    "url-metadata": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
