--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,9 +17,11 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
+    "react-popper": "^2.3.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-tagify": "^0.1.4",
+    "semantic-ui-react": "^2.1.4",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "url-metadata": "^2.5.0",
